# dow

./: 01-ssh-keys.sh  Justfile  README.md  _base.sh  droplets-create.sh  droplets-delete.sh  droplets-list.sh  pyproject.toml  volumes-delete.sh  volumes-list.sh
.github/workflows/: main.yaml
shell/: 02-add-droplets-to-firewall.sh  98-connect.sh  99-create.sh  _req.sh  droplets-get.sh  images-list.sh  volumes-create.sh  volumes-get.sh
src/: user_data.sh
src/dow/: main.py
src/dow/cli/: cli.py  utils.py
src/dow/cli/commands/: config.py  list_images.py  list_sizes.py  machines.py  volumes.py
src/dow/config/: __init__.py  base.py  data.py
src/dow/do/: __init__.py  base.py  data.py  svc.py
src/dow/svc/: create_machine.py  data.py  list_machines.py  shutdown.py  ssh_config.py
