[tool.poetry]
name = "dow"
version = "0.1.0"
description = ""
authors = ["Mish Savelyev <michael.savelyev@gmail.com>"]
packages = [{include = "dow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.3"
tabulate = "^0.9.0"
colorama = "^0.4.6"
pydantic = "^1.10.9"
tomli-w = "^1.0.0"
paramiko = "^3.2.0"
sshconf = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src"]
